refactor shop update api
