# docs/swagger.yaml
@@ -31,6 +31,15 @@ definitions:
       Price:
         type: integer
     type: object
+  resp.ItemOption:
+    properties:
+      ID:
+        type: integer
+      ItemID:
+        type: integer
+      OptionID:
+        type: integer
+    type: object
   resp.MenuItem:
     properties:
       Item:
@@ -378,26 +387,31 @@ paths:
     post:
       consumes:
       - application/x-www-form-urlencoded
-      description: 新增商店
+      description: 商品加入選單
       parameters:
-      - description: 商店
+      - description: 商品編號
         in: formData
-        name: name
+        name: itemID
         required: true
-        type: string
+        type: integer
+      - description: 選單編號
+        in: formData
+        name: optionID
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: 菜單
+          description: 結果
           schema:
-            $ref: '#/definitions/resp.MenuItem'
+            $ref: '#/definitions/resp.ItemOption'
             type: object
         "500":
           description: 内部错误
           schema:
             type: string
-      summary: 新增商店
+      summary: 商品加入選單
       tags:
       - menu
     put:
@@ -422,6 +436,25 @@ paths:
           schema:
             type: string
       summary: 修改商店
+      tags:
+      - menu
+  /menu/itemOption/optionID:
+    get:
+      description: 取得商店
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 菜單
+          schema:
+            items:
+              $ref: '#/definitions/resp.ItemOption'
+            type: array
+        "500":
+          description: 内部错误
+          schema:
+            type: string
+      summary: 取得商店
       tags:
       - menu
   /menu/menu/{shop}:
@@ -646,35 +679,6 @@ paths:
       summary: 新增商店
       tags:
       - menu
-    put:
-      consumes:
-      - application/x-www-form-urlencoded
-      description: 修改商店
-      parameters:
-      - description: 編號
-        in: formData
-        name: id
-        required: true
-        type: integer
-      - description: 店名
-        in: formData
-        name: name
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 結果
-          schema:
-            type: string
-        "500":
-          description: 内部错误
-          schema:
-            type: string
-      summary: 修改商店
-      tags:
-      - menu
   /menu/shop/{id}:
     delete:
       description: 刪除商店
@@ -696,6 +700,35 @@ paths:
           schema:
             type: string
       summary: 刪除商店
+      tags:
+      - menu
+    put:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: 修改商店
+      parameters:
+      - description: 編號
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 店名
+        in: formData
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 結果
+          schema:
+            type: string
+        "500":
+          description: 内部错误
+          schema:
+            type: string
+      summary: 修改商店
       tags:
       - menu
   /order:
